--- a/src/edu/unm/casaa/main/GLOBAL_CODING.fxml
+++ b/src/edu/unm/casaa/main/GLOBAL_CODING.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="GLOBAL_CODING" styleClass="controlsWin" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="GLOBAL_CODING" styleClass="controlsWin" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TitledPane animated="false" collapsible="false" prefHeight="400.0" prefWidth="600.0" text="Global Ratings" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <content>
@@ -40,4 +40,7 @@
         </content>
       </TitledPane>
    </children>
+   <padding>
+      <Insets bottom="12.0" left="12.0" right="12.0" />
+   </padding>
 </AnchorPane>
