--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -41,27 +41,15 @@
     -fx-image: url("/media/img_rate.png");
 }
 
-.slider-main .track {
+.slider .track {
     -fx-background-color:rgba(255,0,0,0.3);
     -fx-background-insets: 1 0 -1 0, 0, 1;
     -fx-background-radius: 2.5, 2.5, 1.5;
     -fx-padding: 0.208333em; /* 2.5 */
 }
-.slider-main .thumb {
-    -fx-background-color:rgba(0,0,0,0.8);
+.slider .thumb {
+    -fx-background-color: black, radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(0,0,0,0) );
     -fx-background-radius: 4.1;
-}
-.slider-inset .track {
-    -fx-background-color:rgba(255,0,0,0.9);
-    -fx-background-insets: 1 0 -1 0, 0, 1;
-    -fx-background-radius: 2.5, 2.5, 1.5;
-    -fx-padding: 0.208333em; /* 2.5 */
-}
-.slider-inset .thumb {
-    -fx-background-color:rgba(0,0,0,0.8);
-    -fx-background-insets: 1 0 -1 0, 0, 1;
-    -fx-background-radius: 4.1;
-    -fx-border-width: 0.0;
 }
 .player {
     -fx-border-color:rgba(201,201,201,1.0);
@@ -78,15 +66,13 @@
 .pnVolume {
     -fx-border-color:rgba(101,101,101,1.0);
     -fx-border-insets: 0.1, 0.1, 0.1, 0.1;
-    /*-fx-background-color:rgba(255,255,255,0.2);*/
-    -fx-background-color: rgba(255,0,0,0.4);
+    -fx-background-color: linear-gradient(from 0% 0% to 0% 100%, rgba(235,235,235,1.0) 0%, rgba(201,201,201,1.0) 100%);
     -fx-background-radius: 5,4,3,5;
     -fx-border-width: 0.5;
 }
 .player-text {
     -fx-text-fill: linear-gradient(white, #d0d0d0);
     -fx-font-weight: bold;
-    /*-fx-background-color: rgba(0,0,0,0.2);*/
 }
 
 
@@ -105,6 +91,7 @@
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
     -fx-text-fill: linear-gradient(white, #d0d0d0);
     -fx-font-size: 12px;
+    -fx-font-weight: bold;
     -fx-padding: 5 10 5 10;
 }
 .btn-dark-blue:hover {
