--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -43,13 +43,29 @@
 
 .slider .track {
     -fx-background-color:rgba(255,0,0,0.3);
-    -fx-background-insets: 1 0 -1 0, 0, 1;
-    -fx-background-radius: 2.5, 2.5, 1.5;
-    -fx-padding: 0.208333em; /* 2.5 */
+    /* -fx-background-insets: 1 0 -1 0, 0, 1; */
+    /*-fx-background-radius: 2.5, 2.5, 1.5; */
+    /*-fx-padding: 0.208333em; */
+    -fx-pref-height: 12px;
+    -fx-padding: 0;
 }
 .slider .thumb {
     -fx-background-color: black, radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(0,0,0,0) );
     -fx-background-radius: 4.1;
+}
+
+.slider-set .track {
+    -fx-background-color:rgba(255,0,0,0.3);
+    -fx-background-insets: 1 0 -1 0, 0, 1;
+    -fx-background-radius: 2.5, 2.5, 1.5;
+    -fx-padding: 5;
+}
+.slider-set .thumb {
+    -fx-background-color: black, radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(0,0,0,0) );
+    -fx-background-radius: 4.1;
+    /*-fx-pref-height: 6px; */
+    /*-fx-pref-width: 10px;*/
+    -fx-padding: 6;
 }
 .player {
     -fx-border-color:rgba(201,201,201,1.0);
