CHANGES: - Normal OS X system menubar used instead of Java menubar. - Fixed utterance coding temporal resolution. - "Start Coding" button removed. Coding state enabled once playback begins. - Player buttons now have text in addition to ToolTip popup descriptions that don't function in OS X 10.7.5. - User can now apply code to uncoded segment while playback is paused. - Layout compressed vertically to accomodate multiple MISC code buttons.
KNOWN ISSUES:
- If playback reaches end of audio file and resets to time 0:00,
  timeline does not advance with player seek bar until PLAY/PAUSE button is clicked again.

--- a/src/edu/unm/casaa/main/MISC_CODING.fxml
+++ b/src/edu/unm/casaa/main/MISC_CODING.fxml
@@ -4,8 +4,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -27,13 +25,8 @@
                   <Insets top="0.0" />
                </VBox.margin>
             </TitledPane>
-            <HBox alignment="CENTER_LEFT" prefHeight="30.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="25.0">
                <children>
-                  <ToggleButton fx:id="btnStartCoding" mnemonicParsing="false" onAction="#btnActStartCoding" styleClass="btn-dark-blue" stylesheets="@Main.css" text="%btn.startCoding">
-                     <tooltip>
-                        <Tooltip text="%btn.tt.startCoding" />
-                     </tooltip>
-                  </ToggleButton>
                   <Label fx:id="lblCurMiscFile" text="">
                      <padding>
                         <Insets left="12.0" />
@@ -41,70 +34,63 @@
                   </Label>
                </children>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets />
                </VBox.margin>
             </HBox>
-            <TitledPane fx:id="pnlPrevUtr" animated="false" collapsible="false" minHeight="60.0" prefHeight="60.0" text="%pnl.title.prevUtr">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Label fx:id="lblPrevUtr" prefHeight="48.0" prefWidth="620.0" text="" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children>
-                  </AnchorPane>
-              </content>
-               <VBox.margin>
-                  <Insets bottom="2.0" top="4.0" />
-               </VBox.margin>
-            </TitledPane>
-            <TitledPane fx:id="pnlCurUtr" animated="false" collapsible="false" minHeight="60.0" prefHeight="60.0" text="%pnl.title.currUtr">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="620.0" spacing="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <HBox VBox.vgrow="ALWAYS">
+               <children>
+                  <TitledPane fx:id="pnlUtr" animated="false" collapsible="false" minHeight="60.0" prefHeight="60.0" prefWidth="851.0" text="%pnl.title.Utr">
+                    <content>
+                      <AnchorPane maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="-Infinity" prefHeight="180.0">
                            <children>
-                              <Label text="%lbl.enumeration" />
-                              <Label fx:id="lblCurUtrEnum" text="">
-                                 <HBox.margin>
+                              <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="620.0" spacing="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <Label prefHeight="17.0" style="-fx-border-color: #0000FF; -fx-padding: 2 2 2 2; -fx-background-color: #BFBFFF;" text="%lbl.prevUtr">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                       <padding>
+                                          <Insets right="3.0" />
+                                       </padding>
+                                    </Label>
+                                    <Label fx:id="lblPrevUtr" prefHeight="48.0" prefWidth="307.0" text="" />
+                                    <Label prefHeight="17.0" style="-fx-border-color: #00FF00; -fx-background-color: #BFFFBF; -fx-padding: 2 2 2 2;" text="%lbl.currUtr">
+                                       <padding>
+                                          <Insets right="3.0" />
+                                       </padding>
+                                    </Label>
+                                    <Label fx:id="lblCurUtrEnum" text="">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </Label>
+                                    <Label fx:id="lblCurUtrCode" layoutX="94.0" layoutY="10.0" text="" />
+                                    <Label fx:id="lblCurUtrStartTime" text="" />
+                                    <Label fx:id="lblCurUtrEndTime" layoutX="94.0" layoutY="10.0" text="" />
+                                 </children>
+                                 <opaqueInsets>
                                     <Insets />
-                                 </HBox.margin>
-                              </Label>
-                              <Label text="%lbl.miscCode">
-                                 <HBox.margin>
-                                    <Insets left="20.0" />
-                                 </HBox.margin>
-                              </Label>
-                              <Label fx:id="lblCurUtrCode" layoutX="94.0" layoutY="10.0" text="" />
-                              <Label text="%lbl.miscStartTime">
-                                 <HBox.margin>
-                                    <Insets left="20.0" />
-                                 </HBox.margin>
-                              </Label>
-                              <Label fx:id="lblCurUtrStartTime" text="" />
-                              <Label text="%lbl.miscEndTime">
-                                 <HBox.margin>
-                                    <Insets left="20.0" />
-                                 </HBox.margin>
-                              </Label>
-                              <Label fx:id="lblCurUtrEndTime" layoutX="94.0" layoutY="10.0" text="" />
+                                 </opaqueInsets>
+                              </HBox>
                            </children>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                        </HBox>
-                     </children>
-                  </AnchorPane>
-              </content>
-               <VBox.margin>
-                  <Insets bottom="2.0" />
-               </VBox.margin>
-            </TitledPane>
+                        </AnchorPane>
+                    </content>
+                     <HBox.margin>
+                        <Insets right="2.0" />
+                     </HBox.margin>
+                  </TitledPane>
+               </children>
+            </HBox>
             <HBox VBox.vgrow="ALWAYS">
                <children>
                   <TitledPane fx:id="titlePnlCodesLeft" animated="false" collapsible="false" minHeight="100.0" text="" HBox.hgrow="ALWAYS">
                     <content>
                       <AnchorPane fx:id="anchPnlCodesLeft" minWidth="-Infinity" prefWidth="200.0">
                            <children>
-                              <GridPane fx:id="pnlCodesLeft" hgap="4.0" prefWidth="307.0" vgap="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <GridPane fx:id="pnlCodesLeft" hgap="2.0" prefWidth="307.0" vgap="2.0" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="-8.0">
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets></GridPane>
                            </children>
                         </AnchorPane>
                     </content>
@@ -116,7 +102,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="200.0">
                            <children>
-                              <GridPane fx:id="pnlCodesRight" hgap="4.0" prefWidth="307.0" vgap="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <GridPane fx:id="pnlCodesRight" hgap="2.0" prefWidth="307.0" vgap="2.0" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="-8.0" />
                            </children>
                         </AnchorPane>
                     </content>
