--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="vbApp" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="800" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
+<VBox fx:id="vbApp" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="800" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
   <children>
     <MenuBar id="menuBar" fx:id="menuBar" styleClass="menuBar" VBox.vgrow="NEVER">
       <menus>
@@ -133,51 +133,66 @@
                   </Pane>
                   <ToolBar fx:id="tbPlayer" styleClass="btnBarPane" GridPane.columnSpan="2147483647">
                      <items>
-                      <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#btnActPlayPause">
+                      <Button fx:id="btnPlayPause" contentDisplay="TOP" graphicTextGap="0.0" minWidth="96.0" mnemonicParsing="false" onAction="#btnActPlayPause" text="Play/Pause">
                            <graphic>
                               <ImageView fx:id="btnPlayImgVw" fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-play" />
                            </graphic>
                            <tooltip>
                               <Tooltip text="%btn.tt.PlayPause" />
                            </tooltip>
+                           <font>
+                              <Font size="10.0" />
+                           </font>
                         </Button>
-                        <Button fx:id="btnReplay" alignment="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#btnActReplay" prefWidth="0.0" visible="false">
+                        <Button fx:id="btnReplay" alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" minWidth="0.0" mnemonicParsing="false" onAction="#btnActReplay" prefWidth="0.0" text="Replay" visible="false">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-replay" />
                            </graphic>
                            <tooltip>
                               <Tooltip text="%btn.tt.Replay" />
                            </tooltip>
+                           <font>
+                              <Font size="10.0" />
+                           </font>
                         </Button>
-                        <Button fx:id="btnUncode" alignment="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#btnActUncode" prefWidth="0.0" visible="false">
+                        <Button fx:id="btnUncode" alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" minWidth="0.0" mnemonicParsing="false" onAction="#btnActUncode" prefWidth="0.0" text="Uncode" visible="false">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-uncode" />
                            </graphic>
                            <tooltip>
                               <Tooltip text="%btn.tt.Uncode" />
                            </tooltip>
+                           <font>
+                              <Font size="10.0" />
+                           </font>
                         </Button>
-                        <Button fx:id="btnUncodeReplay" alignment="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#btnActUncodeReplay" prefWidth="0.0" visible="false">
+                        <Button fx:id="btnUncodeReplay" alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" minWidth="0.0" mnemonicParsing="false" onAction="#btnActUncodeReplay" prefWidth="0.0" text="Uncode/Rewind" visible="false">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-uncodeReplay" />
                            </graphic>
                            <tooltip>
                               <Tooltip text="%btn.tt.UncodeReplay" />
                            </tooltip>
+                           <font>
+                              <Font size="10.0" />
+                           </font>
                         </Button>
-                        <Button fx:id="btnRewind" alignment="CENTER" mnemonicParsing="false" onAction="#btnActRewind">
+                        <Button fx:id="btnRewind" alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" minWidth="96.0" mnemonicParsing="false" onAction="#btnActRewind" text="Rewind">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-rew" />
                            </graphic>
                            <tooltip>
                               <Tooltip text="%btn.tt.Rewind" />
                            </tooltip>
+                           <font>
+                              <Font size="10.0" />
+                           </font>
                         </Button>
                      </items>
                   </ToolBar>
                </children>
                <padding>
-                  <Insets top="10.0" />
+                  <Insets top="2.0" />
                </padding>
             </GridPane>
          </children>
