--- a/src/edu/unm/casaa/main/MISC_CODING.fxml
+++ b/src/edu/unm/casaa/main/MISC_CODING.fxml
@@ -13,10 +13,9 @@
    <children>
       <VBox fx:id="vbPnlMiscCoding" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-
-             <TitledPane animated="false" collapsible="false" minHeight="88.0" minWidth="200.0" prefHeight="120.0" prefWidth="796.0" text="%pnl.title.timeline">
+             <TitledPane animated="false" collapsible="false" minHeight="88.0" minWidth="200.0" prefHeight="180.0" prefWidth="796.0" text="%pnl.title.timeline" VBox.vgrow="ALWAYS">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="74.0" prefWidth="794.0" styleClass="timeline" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" styleClass="timeline" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <StackPane fx:id="pnTimeLine" alignment="CENTER_LEFT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                         <children>
                         </children>
