--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -91,16 +91,18 @@
     -fx-font-weight: bold;
 }
 .unselectedMarkerTextSpeaker1 {
-    -fx-font-size: 8pt;
-    -fx-fill: green;
-    -fx-font-weight: bold;
+    -fx-font-size: 12px;
+    -fx-font-family: "Arial Narrow", "Arial";
+    -fx-fill: red;
+    /*-fx-font-weight: bold;*/
     -fx-font-smoothing-type: lcd;
     -fx-cursor: hand;
 }
 .unselectedMarkerTextSpeaker2 {
-    -fx-font-size: 8pt;
-    -fx-fill: blue;
-    -fx-font-weight: bold;
+    -fx-font-size: 12px;
+    -fx-font-family: "Arial Narrow", "Arial";
+    -fx-fill: darkred;
+    /*-fx-font-weight: bold;*/
     -fx-font-smoothing-type: lcd;
     -fx-cursor: hand;
     -fx-alignment: center ;
