--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -139,6 +139,10 @@
     -fx-font-size: 12px;
     -fx-font-weight: bold;
     -fx-padding: 4 8 4 8;
+    -fx-max-width: 70px;
+    -fx-min-width: 70px;
+    -fx-max-height: 22px;
+    -fx-min-height: 22px;
 }
 .btn-dark-blue:hover {
     -fx-background-color: transparent, linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%), linear-gradient(#20262b, #191d22), radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
