--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.control.Tooltip?>
@@ -27,6 +28,8 @@
           <items>
             <MenuItem fx:id="mniLoadAudio" accelerator="Shortcut+F" mnemonicParsing="false" onAction="#mniActOpenFile" text="%menu.title.file.load.audio" />
               <MenuItem fx:id="mniLoadCasaa" accelerator="Shortcut+C" mnemonicParsing="false" onAction="#mniResumeCoding" text="%menu.title.file.load.casaa" />
+                  <MenuItem fx:id="mniLoadConfig" accelerator="Shortcut+U" mnemonicParsing="false" onAction="#mniLoadConfig" text="%menu.title.file.load.config" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem fx:id="mniExit" accelerator="Shortcut+Q" onAction="#mniActExit" text="%menu.title.file.exit" />
           </items>
         </Menu>
