--- a/src/edu/unm/casaa/main/MISC_CODING.fxml
+++ b/src/edu/unm/casaa/main/MISC_CODING.fxml
@@ -4,8 +4,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -78,34 +80,64 @@
             </HBox>
             <VBox>
                <children>
-                  <HBox>
+                  <AnchorPane VBox.vgrow="SOMETIMES">
                      <children>
-                        <Label fx:id="lblMiscFile" text="%lbl.miscFile">
-                           <padding>
-                              <Insets bottom="4.0" left="8.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="lblCurMiscFile" text="">
-                           <padding>
-                              <Insets bottom="4.0" left="2.0" />
-                           </padding>
-                        </Label>
+                        <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="12.0" prefWidth="111.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="88.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                 <children>
+                                    <Label fx:id="lblCurMiscFile" prefHeight="21.0" prefWidth="721.0" styleClass="lbl-file-path" text="" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0">
+                                       <padding>
+                                          <Insets bottom="4.0" left="2.0" />
+                                       </padding>
+                                    </Label>
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label fx:id="lblConfigFile" depthTest="DISABLE" prefHeight="23.0" prefWidth="110.0" styleClass="lbl-file-path" text="%lbl.configFile" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0">
+                                       <padding>
+                                          <Insets bottom="4.0" left="8.0" />
+                                       </padding>
+                                       <opaqueInsets>
+                                          <Insets />
+                                       </opaqueInsets>
+                                    </Label>
+                                 </children>
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                              </AnchorPane>
+                              <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label fx:id="lblCurConfigFile" prefHeight="23.0" prefWidth="722.0" styleClass="lbl-file-path" text="" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0">
+                                       <padding>
+                                          <Insets bottom="4.0" left="2.0" />
+                                       </padding>
+                                    </Label>
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="lblMiscFile" prefHeight="23.0" prefWidth="110.0" styleClass="lbl-file-path" text="%lbl.miscFile" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0">
+                                       <padding>
+                                          <Insets bottom="4.0" left="8.0" />
+                                       </padding>
+                                    </Label>
+                                 </children>
+                              </AnchorPane>
+                           </children>
+                        </GridPane>
                      </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0">
-                     <children>
-                        <Label fx:id="lblConfigFile" text="%lbl.configFile">
-                           <padding>
-                              <Insets bottom="4.0" left="8.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="lblCurConfigFile" text="">
-                           <padding>
-                              <Insets bottom="4.0" left="2.0" />
-                           </padding>
-                        </Label>
-                     </children>
-                  </HBox>
+                  </AnchorPane>
                </children>
             </VBox>
          </children>
