--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -158,3 +158,12 @@
     -fx-padding: 0 0 0 0;
     -fx-border-width: 0.5;
 }
+.lbl-file-path {
+     -fx-background-color: rgba(0,0,0,0.75),
+                           rgba(255,255,255,0.75),
+                           linear-gradient(to bottom,#aaaaaa 0%,#cccccc 100%);
+     -fx-background-insets: 0 1 1 0, 1 0 0 1, 1;
+     -fx-padding: 3px;
+     -fx-background-radius: 3px;
+     -fx-border-radius: 3px;
+ }
