--- a/src/edu/unm/casaa/main/MISC_CODING.fxml
+++ b/src/edu/unm/casaa/main/MISC_CODING.fxml
@@ -15,7 +15,7 @@
    <children>
       <VBox fx:id="vbPnlMiscCoding" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-             <TitledPane animated="false" collapsible="false" minHeight="88.0" minWidth="200.0" prefHeight="140.0" prefWidth="796.0" text="%pnl.title.timeline" VBox.vgrow="ALWAYS">
+             <TitledPane animated="false" collapsible="false" minHeight="128.0" minWidth="200.0" prefHeight="140.0" prefWidth="796.0" text="%pnl.title.timeline" VBox.vgrow="ALWAYS">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" styleClass="timeline" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <StackPane fx:id="pnTimeLine" alignment="CENTER_LEFT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -47,37 +47,51 @@
                   <Insets bottom="2.0" />
                </padding>
             </TitledPane>
-            <HBox VBox.vgrow="ALWAYS">
+            <AnchorPane prefHeight="600.0" prefWidth="800.0" VBox.vgrow="ALWAYS">
                <children>
-                  <TitledPane fx:id="titlePnlCodesLeft" animated="false" collapsible="false" minHeight="100.0" text="" HBox.hgrow="ALWAYS">
-                    <content>
-                      <AnchorPane fx:id="anchPnlCodesLeft" minWidth="-Infinity" prefWidth="200.0">
+                  <GridPane prefHeight="600.0" prefWidth="796.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <AnchorPane>
                            <children>
-                              <GridPane fx:id="pnlCodesLeft" hgap="2.0" prefWidth="307.0" vgap="2.0" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="-8.0">
-                                 <opaqueInsets>
-                                    <Insets />
-                                 </opaqueInsets></GridPane>
+                              <TitledPane fx:id="titlePnlCodesLeft" animated="false" collapsible="false" minHeight="100.0" prefHeight="100.0" prefWidth="396.0" text="" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <content>
+                                  <AnchorPane fx:id="anchPnlCodesLeft" minWidth="-Infinity" prefWidth="200.0">
+                                       <children>
+                                          <GridPane fx:id="pnlCodesLeft" hgap="2.0" prefWidth="307.0" vgap="2.0" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="-8.0">
+                                             <opaqueInsets>
+                                                <Insets />
+                                             </opaqueInsets>
+                                          </GridPane>
+                                       </children>
+                                    </AnchorPane>
+                                </content>
+                              </TitledPane>
                            </children>
                         </AnchorPane>
-                    </content>
-                     <HBox.margin>
-                        <Insets bottom="2.0" right="2.0" />
-                     </HBox.margin>
-                  </TitledPane>
-                  <TitledPane fx:id="titlePnlCodesRight" animated="false" collapsible="false" minHeight="100.0" text="" HBox.hgrow="ALWAYS">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="200.0">
+                        <AnchorPane GridPane.columnIndex="1">
                            <children>
-                              <GridPane fx:id="pnlCodesRight" hgap="2.0" prefWidth="307.0" vgap="2.0" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="-8.0" />
+                              <TitledPane fx:id="titlePnlCodesRight" animated="false" collapsible="false" minHeight="100.0" prefHeight="100.0" prefWidth="299.0" text="" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <content>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="200.0">
+                                       <children>
+                                          <GridPane fx:id="pnlCodesRight" hgap="2.0" prefWidth="307.0" vgap="2.0" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="-8.0" />
+                                       </children>
+                                    </AnchorPane>
+                                </content>
+                              </TitledPane>
                            </children>
                         </AnchorPane>
-                    </content>
-                     <HBox.margin>
-                        <Insets bottom="2.0" left="2.0" />
-                     </HBox.margin>
-                  </TitledPane>
+                     </children>
+                  </GridPane>
                </children>
-            </HBox>
+            </AnchorPane>
             <VBox>
                <children>
                   <AnchorPane VBox.vgrow="SOMETIMES">
