Updated About Dialog

--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -23,6 +23,10 @@
     -fx-image: url("/media/btn_uncodeReplay.png");
 }
 
+.img-about-bg {
+    -fx-image: url("/media/splash.png");
+}
+
 
 /* */
 .btnBarPane {
@@ -167,3 +171,4 @@
      -fx-background-radius: 3px;
      -fx-border-radius: 3px;
  }
+
