--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.media.MediaView?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.*?>
 <VBox fx:id="vbApp" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="800" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
   <children>
     <MenuBar id="menuBar" fx:id="menuBar" styleClass="menuBar" VBox.vgrow="NEVER">
@@ -56,7 +42,7 @@
          <children>
             <GridPane fx:id="gpMediaPlayer" layoutX="25.5" layoutY="76.5" minWidth="400.0" prefWidth="615.0" styleClass="gp-player" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS" maxWidth="1225.0" minWidth="10.0" prefWidth="1225.0" />
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                 <ColumnConstraints hgrow="ALWAYS" />
                   <ColumnConstraints hgrow="ALWAYS" />
               </columnConstraints>
@@ -78,7 +64,7 @@
                         <Insets left="12.0" />
                      </GridPane.margin>
                   </Label>
-                  <Pane minHeight="46.0" minWidth="58.0" styleClass="pnVolume" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="3">
+                  <Pane maxWidth="58.0" minHeight="46.0" minWidth="58.0" styleClass="pnVolume" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="3">
                      <children>
                         <Label fx:id="lblVolume" alignment="CENTER" contentDisplay="TOP" prefHeight="52.0" prefWidth="30.0" text="0.0">
                            <graphic>
@@ -114,7 +100,7 @@
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </AnchorPane>
-                  <Pane layoutX="563.0" layoutY="12.0" minHeight="46.0" minWidth="58.0" styleClass="pnVolume" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2147483647">
+                  <Pane layoutX="563.0" layoutY="12.0" maxWidth="58.0" minHeight="46.0" minWidth="58.0" styleClass="pnVolume" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2147483647">
                      <children>
                         <Label fx:id="lblRate" alignment="CENTER" contentDisplay="TOP" prefHeight="52.0" prefWidth="30.0" text="0.0">
                            <graphic>
