--- a/src/edu/unm/casaa/main/UtteranceEditor.fxml
+++ b/src/edu/unm/casaa/main/UtteranceEditor.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.VBox?>
 
-<DialogPane fx:id="dlgEditor" expanded="true" xmlns="http://javafx.com/javafx/8.0.162" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
+<DialogPane fx:id="dlgEditor" expanded="true" styleClass="modal-dialog-glass" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
    <content>
-      <VBox fx:id="dlgVbox">
+      <VBox fx:id="dlgVbox" styleClass="modal-dialog-content">
          <children>
             <Label fx:id="dlgLblAnnotation" text="Annotation:">
                <padding>
@@ -36,4 +36,7 @@
       <ButtonType fx:constant="APPLY" />
       <ButtonType fx:constant="CANCEL" />
    </buttonTypes>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </DialogPane>
