--- a/src/edu/unm/casaa/main/Report.fxml
+++ b/src/edu/unm/casaa/main/Report.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
-<VBox stylesheets="@Main.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -29,11 +29,16 @@
          <children>
             <ScrollPane fx:id="pnReport" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="574.0" prefWidth="898.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0">
                      <children>
                         <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Label styleClass="lbl-report-section" text="Global Ratings" />
+                              <AnchorPane>
+                                 <children>
+                                    <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="371.0" layoutY="-9.0" styleClass="lbl-report-section" text="Therapist Feedback" />
+                                 </children>
+                              </AnchorPane>
+                              <Label layoutX="20.0" layoutY="20.0" styleClass="lbl-report-section" text="Global Ratings" />
                               <TextFlow fx:id="rptScore_global_ratings_tf">
                                  <padding>
                                     <Insets bottom="20.0" />
